--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  overlay_screen: ^1.2.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
