--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   overlay_screen: ^1.2.0+1
   http: ^0.12.2
+  provider: ^4.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
