--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
     sdk: flutter
   overlay_screen: ^1.2.0+1
   http: ^0.12.2
-
+  flutter_native_splash: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
