--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   http: ^0.12.2
   provider: ^4.3.3
   flutter_native_splash: ^1.0.2
+  flutter_tts: ^3.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
