--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,11 @@ dependencies:
     sdk: flutter
   overlay_screen: ^1.2.0+1
   flutter_markdown: ^0.5.2
-  url_launcher: ^5.7.10
+  url_launcher: ^6.0.4
   http: ^0.12.2
   provider: ^4.3.3
   flutter_native_splash: ^1.0.2
+  file_picker: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
