--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   overlay_screen: ^1.2.0+1
-  http: ^0.12.2
+  http: ^0.13.2
   provider: ^4.3.3
   flutter_native_splash: ^1.0.2
   flutter_tts: ^3.0.0
+#  image_picker: ^0.8.2
 
 
   # The following adds the Cupertino Icons font to your application.
