--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cboard_mobile">
    <application
+        android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true"
         android:label="cboard_mobile"
         android:icon="@mipmap/ic_launcher">
@@ -38,6 +39,11 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
