--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,12 @@ dependencies:
     sdk: flutter
   overlay_screen: ^1.2.0+1
   http: ^0.13.2
-  provider: ^4.3.3
+  provider: ^5.0.0
   flutter_native_splash: ^1.0.2
   flutter_tts: ^3.0.0
-#  image_picker: ^0.8.2
-
+  image_picker: ^0.8.2
+  flutter_sound: ^8.2.5
+  permission_handler: ^8.1.4+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
