--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   image_picker: ^0.8.2
   flutter_sound: ^8.2.5
   permission_handler: ^8.1.4+1
+  flutter_markdown: ^0.5.2
+  url_launcher: ^6.0.4
+  file_picker: ^3.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
