--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cboard_mobile">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:usesCleartextTraffic="true"
         android:label="cboard_mobile"
