Manasa-Unlocked Screen: Edit Tiles (#6)
* Edit, Delete Screens

* Redistribute files for lockedScreens

* Modify home screen

* Fixed bottom sheet

* Finish edit tile screen

* new tile,voice recorder

* minor

* modifications and conflicts

* Add Provider Listener to top tree
Purpose is to keep track of changes in edit_dialog

* Add tile layout

Tiles are flexible with different grid view and screen size

* Add tile containing user text input

* Edit home screen

Change children widgets so they are flexible with different screen size

* Add dialog state

* Add image

* Add edit appearence screen of dialog

* Add edit_label_size screen of dialog

* Add edit_label screen for dialog

* Modify data for testing

* Delete files creat_tile.dart and widgets.dart

* changes and lock dialog

* Integrate tts, modify test data

* Try coneecting to Api

* Modify tts function, allow repeating full sentence

* test, back button

Co-authored-by: Manasa Pakala <manasa@Manasas-MacBook-Pro.local>
Co-authored-by: nganphan123 <jill01009@gmail.com>
Co-authored-by: tungtrn <tungt1281@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,10 @@ unlinked_spec.ds
 # macOS
 **/macos/Flutter/GeneratedPluginRegistrant.swift
 
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
 # Coverage
 coverage/
 
