--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cboard_mobile">
    <application
-        android:usesCleartextTraffic="true"
         android:label="cboard_mobile"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -40,4 +39,5 @@
             android:value="2" />
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 </manifest>
