Onboarding Screens: Sign Up Complete & Select Profile Picture UI (#8)
* Finised language/country selection page, Sign-Up Screen and fixed Login UI issue

* Finished UI for sign up complete & select photo

* Added select voice page

* Updated voice select with symbols

* update with state management and pr comments

* Fixed email validation error

* Updated auto validation in sign up

* Fixed overflow error in login page

Co-authored-by: kongt <tinak2@illinois.edu>
Co-authored-by: Tina Kong <42946669+TinaKong83@users.noreply.github.com>

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.cboard_mobile">
    <application
+        android:requestLegacyExternalStorage="true"
+        android:usesCleartextTraffic="true"
         android:label="cboard_mobile"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -37,6 +39,11 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
