--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,7 +43,13 @@
 		<false/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>Upload images for screen background</string>
+		<key>NSCameraUsageDescription</key>
+		<string>Upload image from camera for screen background</string>
 		<key>NSMicrophoneUsageDescription</key>
+		<string>Post videos to profile</string>
+    <key>NSMicrophoneUsageDescription</key>
         <string>Record audio for playback</string>
 	</dict>
 </plist>
