--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,14 @@ dependencies:
   flutter:
     sdk: flutter
   overlay_screen: ^1.2.0+1
+  flutter_markdown: ^0.5.2
+  url_launcher: ^6.0.4
+  http: ^0.13.3
+  flutter_native_splash: ^1.0.2
+  flutter_tts: ^3.0.0
+  file_picker: ^3.0.1
+  image_picker: ^0.8.2
+  image_cropper: ^1.4.1
   http: ^0.13.2
   provider: ^5.0.0
   flutter_native_splash: ^1.0.2
@@ -31,9 +39,6 @@ dependencies:
   image_picker: ^0.8.2
   flutter_sound: ^8.2.5
   permission_handler: ^8.1.4+1
-  flutter_markdown: ^0.5.2
-  url_launcher: ^6.0.4
-  file_picker: ^3.0.1
   flutter_svg: ^0.22.0
   path_provider: ^2.0.3
   
@@ -62,6 +67,7 @@ flutter:
     - assets/markdown/About/
     - assets/markdown/User-help/
     - assets/symbols/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
