--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   permission_handler: ^8.1.4+1
   flutter_svg: ^0.22.0
   path_provider: ^2.0.3
+  bubble_tab_indicator: ^0.1.6
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
