--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   logging: ^1.0.2
+  flutter_localizations:
+    sdk: flutter
+
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +90,7 @@ flutter:
     - assets/symbols/cboard/
     - assets/symbols/mulberry/
     - assets/symbols/
+    - assets/languages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
